@@ -1,5 +1,5 @@
 /*
- * NMRFx Processor : A Program for Processing NMR Data 
+ * NMRFx Processor : A Program for Processing NMR Data
  * Copyright (C) 2004-2017 One Moon Scientific, Inc., Westfield, N.J., USA
  *
  * This program is free software: you can redistribute it and/or modify
@@ -17,14 +17,15 @@
  */
 package org.nmrfx.utils.properties;
 
-import java.text.NumberFormat;
-import java.text.ParseException;
-import java.util.Optional;
-import java.util.function.DoubleFunction;
 import javafx.beans.property.SimpleDoubleProperty;
 import javafx.beans.value.ObservableValue;
 import javafx.event.ActionEvent;
 import org.controlsfx.control.textfield.CustomTextField;
+
+import java.text.NumberFormat;
+import java.text.ParseException;
+import java.util.Optional;
+import java.util.function.DoubleFunction;
 
 public class CustomNumberTextField extends CustomTextField {
 
@@ -47,7 +48,7 @@ public class CustomNumberTextField extends CustomTextField {
     }
 
     public CustomNumberTextField() {
-        this(new Double(0.0));
+        this(Double.valueOf(0.0));
     }
 
     public CustomNumberTextField(Double value) {
